docs/7.52/md/abapcall_function.md
---
title: "CALL FUNCTION"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_shortref.htm) Syntax Forms General Function Module Call(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_general.htm) 1. CALL FUNCTION func  parameter_list(https://help
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function.htm"
abapFile: "abapcall_function.htm"
keywords: ["update", "do", "if", "case", "try", "method", "class", "data", "abapcall", "function"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Calling and leaving program units](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_execution.htm) →  [Calling Processing Blocks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_processing_blocks.htm) →  [Calling Procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_procedures.htm) → 

CALL FUNCTION

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_shortref.htm)

Syntax Forms

[General Function Module Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_general.htm)
1\. CALL FUNCTION func *{* [parameter\_list](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_parameter.htm)
                     *|* [parameter\_tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_dynamic.htm) *}*.
[Registers an update function module](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_update.htm)
2\. CALL FUNCTION update\_function IN UPDATE TASK
                *\[*EXPORTING p1 = a1 p2 = a2 ...*\]*
                *\[*TABLES t1 = itab1 t2 = itab2 ...*\]*.
[Remote function call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_destination-.htm)
3\. CALL FUNCTION... DESTINATION ...

Effect

Calls or registers a function module. Static calls and dynamic function module calls have no differences in their syntax. The function module is always specified using a data object and the name of the called function module is not determined until runtime.

System Fields

The system field sy-subrc is set to 0 when a function module is called. If a [non-class-based exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_non_class.htm) is raised that was handled by the assignment of a value, sy-subrc is set to this value. After an update function module is registered using CALL FUNCTION ... IN UPDATE TASK, however, sy-subrc is undefined.

Notes

-   Unlike in method calls, there are no different syntax variants for static calls and dynamic calls of function modules. They can, however, be distinguished as follows:
    

-   In static function module calls, a known static function module is specified as a [character literal](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencharacter_literal_glosry.htm "Glossary Entry") or as a constant and the parameter is passed statically. This static data is evaluated by tools like the [Extended Program Check](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenextended_program_check_glosry.htm "Glossary Entry") or the where-used list.

-   In dynamic function module calls, the name of the function module is specified in a variable and the parameter is passed dynamically. This is possible in general function module calls.

In both cases, incorrectly specified function modules or parameters produce runtime errors and not syntax errors

-   [CALL CUSTOMER-FUNCTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_customer-function.htm) is another variant for calling obsolete function module exits.
    

Security Note

If the name of a program unit is specified dynamically when it is called, and this name is passed to a program from outside, the result is a serious security risk. Any names passed to a program from outside must be checked thoroughly before being used in calls. The system class CL\_ABAP\_DYN\_PRG, for example, can be used to do this. See [Dynamic Calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendyn_call_scrty.htm).

Continue
[CALL FUNCTION func](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_general.htm)
[CALL FUNCTION - parameter\_list](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_parameter.htm)
[CALL FUNCTION - parameter\_tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_dynamic.htm)